<resources>
    <string name="about_android">%1$s Android app</string>
    <string name="about_version">version %1$s</string>
    <string name="about_version_with_build">version %1$s, build #%2$s</string>
    <string name="actionbar_sync">Refresh account</string>
    <string name="actionbar_open_with">Open with</string>
    <string name="actionbar_mkdir">New folder</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_see_details">Details</string>
    <string name="actionbar_send_file">Send</string>
    <string name="actionbar_sort">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="menu_item_sort_by_name_a_z">A - Z</string>
    <string name="menu_item_sort_by_name_z_a">Z - A</string>
    <string name="menu_item_sort_by_date_newest_first">Newest first</string>
    <string name="menu_item_sort_by_date_oldest_first">Oldest first</string>
    <string name="menu_item_sort_by_size_biggest_first">Biggest first</string>
    <string name="menu_item_sort_by_size_smallest_first">Smallest first</string>
    <string name="drawer_item_all_files">All files</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_favorites">Favorites</string>
    <string name="drawer_item_photos">Photos</string>
    <string name="drawer_item_on_device">On device</string>
    <string name="drawer_item_recently_added">Recently added</string>
    <string name="drawer_item_recently_modified">Recently modified</string>
    <string name="drawer_item_shared">Shared</string>
    <string name="drawer_item_videos">Videos</string>
    <string name="drawer_item_uploads_list">Uploads</string>
    <string name="drawer_item_activities">Activities</string>
    <string name="drawer_item_notifications">Notifications</string>
    <string name="drawer_item_cmore_media">CmoreMedia</string>
    <string name="drawer_quota">%1$s of %2$s used</string>
    <string name="drawer_quota_unlimited">%1$s used</string>
    <string name="drawer_close">Close sidebar</string>
    <string name="drawer_open">Open sidebar</string>
    <string name="prefs_category_general">General</string>
    <string name="prefs_category_more">More</string>
    <string name="prefs_manage_accounts">Manage accounts</string>
    <string name="prefs_lock">App passcode</string>
    <string name="prefs_lock_title">Protect app using</string>
    <string name="prefs_lock_none">None</string>
    <string name="prefs_lock_using_passcode">Passcode</string>
    <string name="prefs_lock_using_device_credentials">Device credentials</string>
    <string name="prefs_lock_device_credentials_enabled">Device credentials enabled</string>
    <string name="prefs_lock_device_credentials_not_setup">No device credentials have been set up.</string>
    <string name="prefs_show_hidden_files">Show hidden files</string>
    <string name="prefs_enable_media_scan_notifications">Show media scan notifications</string>
    <string name="prefs_enable_media_scan_notifications_summary">Notify about newly found media folders</string>
    <string name="prefs_calendar_contacts">Sync calendar &amp; contacts</string>
    <string name="prefs_calendar_contacts_summary">Set up DAVx5 (formerly known as DAVdroid) (v1.3.0+) for current account</string>
    <string name="prefs_calendar_contacts_address_resolve_error">Server address for the account could not be resolved for DAVx5 (formerly known as DAVdroid)</string>
    <string name="prefs_calendar_contacts_no_store_error">Neither F-Droid nor Google Play is installed</string>
    <string name="prefs_calendar_contacts_sync_setup_successful">Calendar &amp; contacts sync set up</string>
    <string name="prefs_daily_contacts_sync_summary">Daily backup of your contacts</string>
    <string name="prefs_help">Help</string>
    <string name="prefs_recommend">Recommend to friend</string>
    <string name="prefs_imprint">Imprint</string>
    <string name="prefs_value_theme_light">Light</string>
    <string name="prefs_value_theme_dark">Dark</string>
    <string name="prefs_value_theme_system">Follow system</string>
    <string name="prefs_theme_title">Theme</string>
    <string name="recommend_subject">Try %1$s on your device!</string>
    <string name="recommend_text">I want to invite you to use %1$s on your device.\nDownload here: %2$s</string>
    <string name="recommend_urls">%1$s or %2$s</string>
    <string name="auth_check_server">Check server</string>
    <string name="auth_host_url">Server address https://…</string>
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="sync_string_files">Files</string>
    <string name="setup_btn_connect">Connect</string>
    <string name="uploader_btn_upload_text">Upload</string>
    <string name="uploader_btn_alternative_text">Choose</string>
    <string name="uploader_top_message">Choose upload folder</string>
    <string name="uploader_wrn_no_account_title">No account found</string>
    <string name="uploader_wrn_no_account_text">There are no %1$s accounts on your device. Please set up an account first.</string>
    <string name="uploader_wrn_no_account_setup_btn_text">Setup</string>
    <string name="uploader_wrn_no_account_quit_btn_text">Quit</string>
    <string name="uploader_error_title_no_file_to_upload">No file to upload</string>
    <string name="uploader_error_message_no_file_to_upload">Received data did not include a valid file.</string>
    <string name="uploader_error_title_file_cannot_be_uploaded">This file can not be uploaded</string>
    <string name="uploader_error_message_read_permission_not_granted">%1$s is not allowed to read a received file</string>
    <string name="uploader_error_message_source_file_not_found">File selected for upload not found. Please check whether the file exists.</string>
    <string name="uploader_error_message_source_file_not_copied">Could not copy file to a temporary folder. Try to resend it.</string>
    <string name="uploader_upload_files_behaviour">Upload option:</string>
    <string name="uploader_upload_files_behaviour_move_to_nextcloud_folder">Move file to %1$s folder</string>
    <string name="uploader_upload_files_behaviour_only_upload">Keep file in source folder</string>
    <string name="uploader_upload_files_behaviour_upload_and_delete_from_source">Delete file from source folder</string>
    <string name="file_list_seconds_ago">seconds ago</string>
    <string name="file_list_empty_headline">No files here</string>
    <string name="folder_list_empty_headline">No folders here</string>
    <string name="file_list_empty">Upload some content or sync with your devices.</string>
    <string name="file_list_empty_favorites_filter_list">Files and folders you mark as favorites will show up here</string>
    <string name="file_list_empty_favorites_filter">Your search returned no favorited files.</string>
    <string name="file_list_loading">Loading…</string>
    <string name="file_list_no_app_for_file_type">No app set up to handle this file type.</string>
    <string name="local_file_list_empty">There are no files in this folder.</string>
    <string name="local_folder_list_empty">There are no further folders.</string>
    <string name="file_list_empty_headline_search">No results in this folder</string>
    <string name="file_list_empty_headline_server_search">No results</string>
    <string name="file_list_empty_favorite_headline">Nothing favorited yet</string>
    <string name="file_list_empty_shared_headline">Nothing shared yet</string>
    <string name="file_list_empty_shared">Files and folders you share will show up here</string>
    <string name="file_list_empty_headline_server_search_videos">No videos</string>
    <string name="file_list_empty_headline_server_search_photos">No photos</string>
    <string name="file_list_empty_search">Maybe it is in a different folder?</string>
    <string name="file_list_empty_recently_modified">Found no files modified within the last 7 days</string>
    <string name="file_list_empty_recently_modified_filter">No files modified the last 7 days.</string>
    <string name="file_list_empty_recently_added">Found no recently added files</string>
    <string name="file_list_empty_recently_added_filter">No recently added files.</string>
    <string name="file_list_empty_text_photos">Upload some photos or activate auto upload.</string>
    <string name="file_list_empty_text_photos_filter">No photos.</string>
    <string name="file_list_empty_text_videos">Upload some videos or activate auto upload.</string>
    <string name="file_list_empty_text_videos_filter">No videos.</string>
    <string name="trashbin_empty_headline">No deleted files</string>
    <string name="trashbin_empty_message">You will be able to recover deleted files from here</string>
    <string name="upload_list_empty_headline">No uploads available</string>
    <string name="upload_list_empty_text_auto_upload">Upload some content or activate auto upload.</string>
    <string name="file_list_folder">folder</string>
    <string name="filedetails_download">Download</string>
    <string name="filedetails_sync_file">Sync</string>
    <string name="filedetails_renamed_in_upload_msg">File renamed %1$s during upload</string>
    <string name="list_layout">Listed layout</string>
    <string name="action_send_share">Send/Share</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel_sync">Cancel sync</string>
    <string name="qbee_verify_code">Verify</string>
    <string name="qbee_sign_up">Sign Up</string>
    <string name="qbee_prompt_email">Email Address</string>
    <string name="qbee_agree_terms_policy">I agree to the QBee Terms of Use, Privacy Policy, Fair Use Policy</string>
    <string name="qbee_create_account">Create Account</string>
    <string name="qbee_already_have_account">Already have an account?</string>
    <string name="qbee_sign_in_now">Sign in now</string>
    <string name="qbee_sign_in">Sign In</string>
    <string name="qbee_sign_in_email_username">Email or Username</string>
    <string name="qbee_sign_in_password">Password</string>
    <string name="qbee_sign_in_forgot_password">Forgot your password?</string>
    <string name="qbee_dont_have_account">Don\'t hava an account yet?</string>
    <string name="qbee_sign_up_free">Sign up for free!</string>
    <string name="qbee_verify_your_account">Verify Yout Account</string>
    <string name="qbee_check_verify_email">We have sent you a verification code to %1$s, please check your email.</string>
    <string name="qbee_verification_code">Verification Code</string>
    <string name="qbee_set_password">Set your password</string>
    <string name="qbee_prompt_password">Password</string>
    <string name="qbee_password_hint">Passwords be 7-12 characters</string>
    <string name="qbee_confirm_password">Confirm Password</string>
    <string name="qbee_confirm_password_hint">Type your password once more to make sure it is correct.</string>
    <string name="qbee_how_to_setup_qbee">How would you like to set up your QBee?</string>
    <string name="qbee_choose_a_connection">Choose a connection option</string>
    <string name="qbee_setup_ethernet">Ethernet</string>
    <string name="qbee_access_internet_via_cable">Access internet via cable</string>
    <string name="qbee_setup_set_up_your_qbeebox">Set Up Your QBee Box</string>
    <string name="qbee_setup_proceed_as_follows">Proceed as follows</string>
    <string name="qbee_setup_step_1">Insert the Ethernet cable</string>
    <string name="qbee_setup_step_2">Connect QBee Box with power</string>
    <string name="qbee_setup_device_info">Device Info</string>
    <string name="qbee_setup_device_id">DeviceID：%1$s</string>
    <string name="qbee_setup_device_status">DeviceStatus：%1$s</string>
    <string name="qbee_setup_device_connect">Connect</string>
</resources>