<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/qbee_how_to_setup_qbee"
        android:textColor="@color/design_default_color_error"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/qbee_choose_a_connection"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/blockOptionEthernet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/e2e_border"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qbee_setup_ethernet"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qbee_access_internet_via_cable"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/btnNext"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/list_selector_focused_pressed"
            android:src="@drawable/arrow_right" />
    </LinearLayout>
</LinearLayout>
